weblio/migration-helper/migration-helper-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: migration-helper
  labels:
    app.kubernetes.io/name: migration-helper
    app.kubernetes.io/component: migration
    app.kubernetes.io/part-of: weblio
