weblio/migration-helper/migration-helper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: migration-helper
  namespace: migration-helper
  labels:
    app.kubernetes.io/name: migration-helper
    app.kubernetes.io/component: migration
    app.kubernetes.io/part-of: weblio
spec:
  selector:
    app.kubernetes.io/name: migration-helper
    app.kubernetes.io/component: migration
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
