weblio/migration-helper/migration-helper-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: migration-helper
  namespace: migration-helper
  labels:
    app.kubernetes.io/name: migration-helper
    app.kubernetes.io/component: migration
    app.kubernetes.io/part-of: weblio
spec:
  entryPoints:
    - websecure
  tls:
    certResolver: letsencrypt-weblio
  routes:
    - match: Host(`migration.weblio.se`)
      kind: Rule
      services:
        - name: migration-helper
          port: 3000
      middlewares:
        - name: authentik
          namespace: authentik
